Bugfix: Tum sayfalardaki hatalar duzeltildi
- Carousel cift id hatasi duzeltildi (anasayfa + mainCarousel → mainCarousel)
- Gorsel referanslari duzeltildi (service2.jpg→png, facebook.jpg→png)
- Sayfa linkleri duzeltildi (evrak-takip→evrak_takip_page, personel-tedarik→personel_tedarik_page)
- Tum sayfalarda footer yili 2025→2026 guncellendi

--- a/site/index.html
+++ b/site/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <main>
-        <section id="anasayfa" class="carousel slide" id="mainCarousel" data-bs-ride="carousel">
+        <section id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="carousel-image-wrapper">
@@ -55,7 +55,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Hızlı Evrak Takip</h1>
                         <p>Güvenilir ve hızlı çözümler sunuyoruz.</p>
-                        <a href="pages/evrak-takip.html" class="btn btn-primary btn-lg mt-3">Detayları İnceleyin</a>
+                        <a href="pages/evrak_takip_page.html" class="btn btn-primary btn-lg mt-3">Detayları İnceleyin</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -65,7 +65,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Profesyonel Personel Tedarik</h1>
                         <p>İhtiyacınıza özel ekipler oluşturuyoruz.</p>
-                        <a href="pages/personel-tedarik.html" class="btn btn-primary btn-lg mt-3">Detayları İnceleyin</a>
+                        <a href="pages/personel_tedarik_page.html" class="btn btn-primary btn-lg mt-3">Detayları İnceleyin</a>
                     </div>
                 </div>
             </div>
@@ -94,17 +94,17 @@
                             <div class="service-overlay">
                                 <h3 class="text-white mb-3">Evrak Takip</h3>
                                 <p class="text-white-75 mb-4">KKTC'de tüm resmi evrak işlemlerinizi profesyonelce takip ediyoruz.</p>
-                                <a href="pages/evrak-takip.html" class="btn btn-primary">Detaylı İncele</a>
+                                <a href="pages/evrak_takip_page.html" class="btn btn-primary">Detaylı İncele</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="service-card">
-                            <img src="images/service2.jpg" alt="Personel Tedarik Hizmeti" class="service-image">
+                            <img src="images/service2.png" alt="Personel Tedarik Hizmeti" class="service-image">
                             <div class="service-overlay">
                                 <h3 class="text-white mb-3">Personel Tedarik</h3>
                                 <p class="text-white-75 mb-4">Uluslararası kaynaklardan nitelikli personel temin ediyoruz.</p>
-                                <a href="pages/personel-tedarik.html" class="btn btn-primary">Detaylı İncele</a>
+                                <a href="pages/personel_tedarik_page.html" class="btn btn-primary">Detaylı İncele</a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                 <div class="row justify-content-center g-4">
                     <div class="col-md-3 col-6 text-center">
                         <a href="https://facebook.com/devsoyconsultancy" class="social-link" target="_blank" rel="noopener noreferrer">
-                            <img src="images/facebook.jpg" alt="Facebook" class="social-icon">
+                            <img src="images/facebook.png" alt="Facebook" class="social-icon">
                             <h5 class="mt-3">Facebook</h5>
                         </a>
                     </div>
@@ -196,12 +196,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <p class="mb-0">© 2025 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
+                    <p class="mb-0">© 2026 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
                 </div>
                 <div class="col-md-4 text-md-end">
                     <div class="d-flex justify-content-md-end justify-content-center gap-3 mt-3 mt-md-0">
                         <a href="https://facebook.com/devsoyconsultancy" class="social-link-footer" target="_blank">
-                            <img src="images/facebook.jpg" alt="Facebook" style="width: 32px; height: 32px; border-radius: 8px;">
+                            <img src="images/facebook.png" alt="Facebook" style="width: 32px; height: 32px; border-radius: 8px;">
                         </a>
                         <a href="https://instagram.com/devsoyconsultancy" class="social-link-footer" target="_blank">
                             <img src="images/instagram.jpg" alt="Instagram" style="width: 32px; height: 32px; border-radius: 8px;">
