--- a/site/pages/pages_hakkimizda.html
+++ b/site/pages/pages_hakkimizda.html
@@ -166,12 +166,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <p>© 2025 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
+                    <p>© 2026 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
                 </div>
                 <div class="col-md-4 text-md-end">
                     <div class="social-links">
                         <a href="https://facebook.com/devsoyconsultancy" class="social-link">
-                            <img src="../images/facebook.jpg" alt="Facebook" class="social-icon">
+                            <img src="../images/facebook.png" alt="Facebook" class="social-icon">
                         </a>
                         <a href="https://instagram.com/devsoyconsultancy" class="social-link">
                             <img src="../images/instagram.jpg" alt="Instagram" class="social-icon">
