--- a/site/pages/personel_tedarik_page.html
+++ b/site/pages/personel_tedarik_page.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <img src="../images/service2.jpg" alt="Personel Tedarik Hizmetleri" class="hero-image img-fluid">
+                        <img src="../images/service2.png" alt="Personel Tedarik Hizmetleri" class="hero-image img-fluid">
                     </div>
                     <div class="col-md-6">
                         <h1 class="display-4 text-primary mb-3">Personel Tedarik Hizmetleri</h1>
@@ -354,12 +354,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <p class="mb-0">© 2025 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
+                    <p class="mb-0">© 2026 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
                 </div>
                 <div class="col-md-4 text-md-end">
                     <div class="d-flex justify-content-md-end justify-content-center gap-3 mt-3 mt-md-0">
                         <a href="https://facebook.com/devsoyconsultancy" target="_blank">
-                            <img src="../images/facebook.jpg" alt="Facebook" style="width: 32px; height: 32px; border-radius: 8px;">
+                            <img src="../images/facebook.png" alt="Facebook" style="width: 32px; height: 32px; border-radius: 8px;">
                         </a>
                         <a href="https://instagram.com/devsoyconsultancy" target="_blank">
                             <img src="../images/instagram.jpg" alt="Instagram" style="width: 32px; height: 32px; border-radius: 8px;">
