--- a/site/pages/evrak_takip_page.html
+++ b/site/pages/evrak_takip_page.html
@@ -254,12 +254,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <p class="mb-0">© 2025 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
+                    <p class="mb-0">© 2026 Dev/Soy Danışmanlık. Tüm hakları saklıdır.</p>
                 </div>
                 <div class="col-md-4 text-md-end">
                     <div class="d-flex justify-content-md-end justify-content-center gap-3 mt-3 mt-md-0">
                         <a href="https://facebook.com/devsoyconsultancy" target="_blank">
-                            <img src="../images/facebook.jpg" alt="Facebook" style="width: 32px; height: 32px; border-radius: 8px;">
+                            <img src="../images/facebook.png" alt="Facebook" style="width: 32px; height: 32px; border-radius: 8px;">
                         </a>
                         <a href="https://instagram.com/devsoyconsultancy" target="_blank">
                             <img src="../images/instagram.jpg" alt="Instagram" style="width: 32px; height: 32px; border-radius: 8px;">
